test_fm/_test20.ref
Error: shadowing method 'x' changes visibility in '_test20.nj' on line 11
