test_fm/_test20.nj
//
// shadowing method changes visibility
//

public class Main extends Object {
  static Integer x() {
  }
}

class Aux extends Main {
  public static Integer x() {
  }
}
